--- a/app/src/main/res/menu/menu_product.xml
+++ b/app/src/main/res/menu/menu_product.xml
@@ -13,6 +13,6 @@
         android:id="@+id/action_cart"
         android:title="Cart"
         app:showAsAction="always"
-        android:actionLayout="@layout/layout_menu_cart"/>
+        app:actionLayout="@layout/layout_menu_cart"/>
 
 </menu>
