--- a/app/src/main/res/layout/layout_item_product.xml
+++ b/app/src/main/res/layout/layout_item_product.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center"
     android:layout_width="200dp"
+    android:orientation="vertical"
     android:layout_height="200dp">
 
     <androidx.cardview.widget.CardView
