--- a/app/src/main/res/layout/layout_item_cart.xml
+++ b/app/src/main/res/layout/layout_item_cart.xml
@@ -70,7 +70,9 @@
                         android:layout_weight="2.2"
                         android:gravity="center_vertical"
                         android:textColor="@color/black"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         tools:text="Title" />
 
                     <TextView
@@ -79,9 +81,9 @@
                         android:layout_height="0dp"
                         android:layout_weight="2.2"
                         android:gravity="center_vertical"
-                        android:textColor="@color/black"
-                        android:textSize="12sp"
-                        tools:text="Giá : 10.000.000" />
+                        android:textColor="#f20"
+                        android:textSize="15sp"
+                        tools:text="10.000.000 đ" />
                     <TextView
                         android:id="@+id/tv_price_sale"
                         android:layout_width="match_parent"
@@ -90,7 +92,7 @@
                         android:gravity="center_vertical"
                         android:textColor="@color/black"
                         android:textSize="12sp"
-                        tools:text="Còn : 700.00 " />
+                        tools:text="82.000 đ 65%" />
                     <LinearLayout
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/bg_border_amount"
