--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -16,7 +16,7 @@
         app:titleTextColor="@color/white" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_weight="9.8"
+        android:layout_weight="8.5"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -30,14 +30,46 @@
             android:layout_margin="4dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <Button
-        android:layout_marginBottom="10dp"
-        android:textColor="#FFFFFF"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/bg_buy"
-        android:layout_gravity="center"
-        android:text="Payment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <RelativeLayout
+        android:layout_weight="1.5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+        <TextView
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="5dp"
+            android:id="@+id/textTitleTotalPrice"
+            android:textStyle="bold"
+            android:textColor="#FB8C00"
+            android:textSize="25sp"
+            android:text="Total Price : "
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:gravity="center"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentEnd="true"
+            android:id="@+id/textTotalPrice"
+            android:textStyle="bold"
+            android:textColor="#D81B60"
+            android:textSize="25sp"
+            android:text="200,000 đ"
+            android:maxLines="1"
+            android:maxWidth="100dp"
+            android:ellipsize="end"
+            android:layout_toRightOf="@id/textTitleTotalPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:id="@+id/buttonPayment"
+            android:layout_centerHorizontal="true"
+            android:textColor="#ffff"
+            android:background="@drawable/bg_buy"
+            android:layout_below="@id/textTotalPrice"
+            android:layout_marginTop="5dp"
+            android:text="Payment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </RelativeLayout>
 
 </LinearLayout>
